--- a/src/components/Account/Account.module.css
+++ b/src/components/Account/Account.module.css
@@ -3,4 +3,30 @@
     color: white;
     border: 1px solid antiquewhite;
     border-radius: 8px;
+    font-weight: 600;
+    font-size: 28px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-around;
+}
+
+.flex img {
+    width: 70px;
+    height: 70px;
+}
+
+.flex p {
+    margin: 0;
+    padding-top: 20px;
+}
+
+li {
+    font-size: 15px;
+}
+
+a {
+    text-decoration: underline;
+    color: white;
 }
