--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,9 +1,3 @@
-img {
-    width: 20px;
-    height: 20px;
-    color: white;
-}
-
 .main {
     background: linear-gradient(90deg, #f4f9db, #eff0f1);
     border: 1px solid rgb(238, 176, 176);
@@ -16,7 +10,7 @@ img {
     background-color: #89abe6;
     color: white;
     font-weight: 600;
-    margin-bottom: 12px;
+    margin: 0px 20px 10px 20px;
     padding: 5px 40px 5px 10px;
     border-radius: 10px;
     text-align: left;
@@ -64,6 +58,99 @@ img {
     cursor: pointer;
 }
 
+.manipulationIcons span img {
+    width: 20px;
+    height: 20px;
+    color: white;
+}
+
 .manipulationIcons span:hover {
     background-color: #f4f9db;
+}
+
+.editingInput {
+    width: 450px;
+    border: 1px solid #cccccc;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    background: #ffffff;
+    outline: none;
+    height: 28px;
+    color: #2d80f4;
+    font-size: 15px;
+    font-weight: 600;
+    font-family: 'Tamoha';
+}
+
+.btn {
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 0 20px;
+    margin: 0 15px 15px 10px;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    height: 32px;
+    line-height: 32px;
+    font-size: 14px;
+    font-weight: 500;
+    text-decoration: none;
+    color: #fff;
+    background-color: #f61a3b;
+    box-shadow: 0 2px #21487f;
+    cursor: pointer;
+    user-select: none;
+    appearance: none;
+    touch-action: manipulation;
+    vertical-align: top;
+}
+.btn:hover {
+    background-color: rgb(240, 68, 102);
+}
+.btn:active {
+    background-color: #2f599e;
+}
+.btn:focus-visible {
+    box-shadow: 0 0 0 3px lightskyblue;
+}
+.btn:disabled {
+    background-color: #6c87b5;
+    pointer-events: none;
+}
+
+.btnUpd {
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 0 20px;
+    margin: 0 15px 15px 10px;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    height: 32px;
+    line-height: 32px;
+    font-size: 14px;
+    font-weight: 500;
+    text-decoration: none;
+    color: #fff;
+    background-color: #3775dd;
+    box-shadow: 0 2px #21487f;
+    cursor: pointer;
+    user-select: none;
+    appearance: none;
+    touch-action: manipulation;
+    vertical-align: top;
+}
+.btnUpd:hover {
+    background-color: #002fed;
+}
+.btnUpd:active {
+    background-color: #2f599e;
+}
+.btnUpd:focus-visible {
+    box-shadow: 0 0 0 3px lightskyblue;
+}
+.btnUpd:disabled {
+    background-color: #6c87b5;
+    pointer-events: none;
 }
