--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -65,10 +65,12 @@
 }
 
 .manipulationIcons span:hover {
-    background-color: #f4f9db;
+    background-color: green;
+    filter: sepia(0.5);
 }
 
 .editingInput {
+    margin-left: 25px;
     width: 450px;
     border: 1px solid #cccccc;
     border-radius: 8px;
@@ -87,7 +89,7 @@
     display: inline-block;
     box-sizing: border-box;
     padding: 0 20px;
-    margin: 0 15px 15px 10px;
+    margin: 0 0 15px 5px;
     outline: none;
     border: none;
     border-radius: 4px;
