--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -7,4 +7,7 @@
     margin: 0;
     font-size: 30px;
     font-family: 'Raleway', cursive;
+    color: white;
+    text-shadow: 1px 1px 2px black;
+    font-weight: 600;
 }
