--- a/src/pages/authorization.scss
+++ b/src/pages/authorization.scss
@@ -57,11 +57,47 @@
     }
 
     .buttons {
-        a {
-            color: #89abe6;
+        button {
+            display: inline-block;
+            box-sizing: border-box;
+            padding: 0 20px;
+            margin: 15px 15px 15px 10px;
+            outline: none;
+            border: none;
+            border-radius: 4px;
+            height: 32px;
+            line-height: 32px;
+            font-size: 14px;
+            font-weight: 500;
             text-decoration: none;
-            font-size: 18px;
-            font-weight: 600;
+            color: #fff;
+            background-color: #3775dd;
+            box-shadow: 0 2px #21487f;
+            cursor: pointer;
+            user-select: none;
+            appearance: none;
+            touch-action: manipulation;
+            vertical-align: top;
+        }
+        button:hover {
+            background-color: #002fed;
+        }
+        button:active {
+            background-color: #2f599e;
+        }
+        button:focus-visible {
+            box-shadow: 0 0 0 3px lightskyblue;
+        }
+        button:disabled {
+            background-color: #6c87b5;
+            pointer-events: none;
+
+            a {
+                color: #89abe6;
+                text-decoration: none;
+                font-size: 18px;
+                font-weight: 600;
+            }
         }
     }
 }
